--- a/docs-core/pom.xml
+++ b/docs-core/pom.xml
@@ -197,6 +197,12 @@
       <artifactId>h2</artifactId>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+        <groupId>org.mindrot</groupId>
+        <artifactId>jbcrypt</artifactId>
+        <version>0.4</version>
+    </dependency>
   </dependencies>
 
   <profiles>
